--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,6 @@
 baseURL = 'https://tasekida.github.io/hands-on/'
 languageCode = 'ja-jp'
 title = 'hands on'
+[module]
+[[module.imports]]
+path = 'github.com/alex-shpak/hugo-book'
